[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ui.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/game/ui_pause_button.png" type="Texture" id=2]
[ext_resource path="res://Autumn Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/combo.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/pause_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/settings_panel.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/end_game_panel.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/leave_panel.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 3
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 3
outline_color = Color( 0.12549, 0.12549, 0.12549, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="ui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="pause_button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -93.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 87.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="score_label" type="Label" parent="."]
margin_left = 21.8019
margin_right = 135.802
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="high_score_label" type="Label" parent="."]
margin_left = 21.8019
margin_top = 75.0
margin_right = 121.802
margin_bottom = 136.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="time_label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -47.0
margin_top = 87.0
margin_right = -24.0
margin_bottom = 142.0
grow_horizontal = 0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2

[node name="combo" parent="." instance=ExtResource( 4 )]

[node name="pause_panel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="settings_panel" parent="." instance=ExtResource( 6 )]
visible = false

[node name="end_game_panel" parent="." instance=ExtResource( 7 )]
visible = false

[node name="leave_panel" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="button_up" from="pause_button" to="." method="_on_pause_button_button_up"]
[connection signal="pressed" from="pause_button" to="." method="_on_pause_button_pressed"]
